# etl

./: .bazelrc  .clang-format  .clang-tidy  .coderabbit.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .treefmt.toml  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  Converting header guards.txt  DOCUMENTATION.md  Doxyfile  LICENSE  MODULE.bazel  README.md  _config.yml  algorithm.h  aligned_variable.h  alignment.h  appveyor.yml  array.h  basic_intrusive_forward_list.h  basic_intrusive_forward_list_node.h  basic_string.h  binary.h  bitset.h  bloom_filter.h  bsd_checksum.h  char_traits.h  checksum.h  conanfile.py  container.h  crc.h  crc16.cpp  crc16.h  crc16_ccitt.cpp  crc16_ccitt.h  (+125 more)
docs/: CMakeLists.txt  Doxyfile.in  Is the ETL free.md  _config.yml  _index.md  about.md  api.rst  bazel.md  conf.py  custom.css  docker.md  format.md  generators.md  index.md  index.rst  inplace_function.md  manchester.md  map.rst  page-template.md  ranges.md  source-formatting.md  testing.md
docs/Getting started/: Setup.md  _index.md
docs/IO/: _index.md  bip_buffer_spsc_atomic.md  buffer_descriptors.md  debounce.md  io_port.md
docs/IO buffers/: _index.md
docs/Messaging/: _index.md  message-broker.md  message-bus.md  message-packet.md  messages.md  reference-counted-messages.md  shared-message.md
docs/api/: map.rst  vector.rst
docs/binary/: Bit.md  _index.md  binary.md  byte.md  flags.md
docs/blog/: _index.md
docs/callbacks/: _index.md  closure.md  delegate-service.md  delegate-vs-inplace_function.md  delegate.md  delegate_observable.md  function.md  inplace_function.md  signal.md
docs/chrono/: _index.md  chrono-literals.md  clocks.md  day.md  duration.md  hh_mm_ss.md  last_spec.md  operators.md  time_point.md
docs/codecs/: _index.md  base64.md  manchester.md
docs/containers/: _index.md  array.md  array_view.md  array_wrapper.md  bip_buffer_spsc_atomic.md  bitset.md  bloom_filter.md  buffer_descriptors.md  const_map.md  indirect_vector.md  vector.md
docs/frameworks/: _index.md  callback-service.md
docs/getting-started/: ETL-logos-icons-and-graphics.md  _index.md  arduino.md  compilers.md  contribute.md  header-guards.md  interfacing-with-c.md  macros.md  no-stl.md  setup.md
docs/iterators/: Iterator.md  _index.md  circular_iterator.md  fixed_iterator.md
docs/maths/: Invert.md  _index.md  absolute.md  checksums-hashes.md  comb-perm.md  constants.md  correlation.md  covariance.md  gamma.md  histogram.md  is_negative.md  limiter.md  mean.md  pseudo_moving_average.md  quantize.md  radix.md  random.md  ratio.md  rescale.md  rms.md  rounded-integral-division.md  scaled-rounding.md  standard_deviation.md  threshold.md  variance.md
docs/multi-tasking/: _index.md  cooperative-scheduler.md  task.md
docs/patterns/: _index.md  observer.md  overload.md  singleton-base.md  singleton.md  successor.md  visitor.md
docs/pseudo-containers/: _index.md  bresenham_line.md
docs/ranges/: _index.md  ranges.md
docs/raw/: ETL logos, icons and graphics.txt  Enabling compiler built-ins.txt  Generators.txt  Interfacing with C.txt  Macros.txt  Overview.txt  delegate-vs-inplace_function.txt
docs/releases/: _index.md
docs/resourses/: _index.md
docs/source/: _index.md  source-formatting.md
docs/state machines/: _index.md  finite-state-machine.md  hierarchical-finite-state-machine.md  state-chart.md
docs/strings/: _index.md  basic_format_spec.md  format.md  string.md  string_stream.md  string_utilities.md  string_view.md  to_arithmetic.md  to_string.md
docs/timers/: _index.md
docs/tutorials/: Generators.md  _index.md  containers_tutorial.md  message_tutorial.md  observer_tutorial.md  shared_message_tutorial.md  unique_ptr-with-etl-pool.md  visitor_tutorial.md
docs/types/: _index.md  largest.md  smallest.md
docs/utilities/: ETL Traits.md  _index.md  alignment.md  atomic.md  bit_stream_reader.md  bit_stream_writer.md  byte_stream_reader.md  byte_stream_writer.md  compare.md  constant.md  cyclic_value.md  debug_count.md  endian.md  enum_type.md  function_traits.md  initializer_list.md  instance_count.md  integral_limits.md  mem_cast.md  not_null.md  nth_type.md  null_type.md  nullptr.md  numeric.md  static_assert.md  type_id.md  versions.md
examples/FunctionInterruptSimulation/: CMakeLists.txt  FunctionInterruptSimulation.cpp  etl_profile.h  etl_user.h
examples/MutexMessageRouter/: CMakeLists.txt  MutexMessageRouter.cpp  MutexMessageRouter.sln  MutexMessageRouter.vcxproj
examples/QueuedFSM/: CMakeLists.txt  QueuedFSM.cpp  etl_profile.h
examples/QueuedMessageRouter/: CMakeLists.txt  QueuedMessageRouter.cpp  etl_profile.h
examples/Scheduler/: CMakeLists.txt  Scheduler.cpp
examples/SharedMessage/: CMakeLists.txt  SharedMessage.cpp  SharedMessage.sln  SharedMessage.vcxproj  SharedMessage.vcxproj.filters
fuzz/: CMakeLists.txt  hash_fuzzer.cpp  string_fuzzer.cpp
test/: BUILD.bazel  CMakeLists.txt  ExtraCheckMacros.h  cppcheck_macro_definitions.txt  data.h  ecl_user.h  etl_profile.h  iterators_for_unit_tests.h  list_header_files.bat  list_test_files.bat  list_test_files.ps1  list_test_files.sh  main.cpp  maincpp03check.cpp  meson.build  murmurhash3.cpp  murmurhash3.h  no_stl_test_iterators.h  run-clang-tidy.sh  run-coverage.sh  run-syntax-checks.sh  run-tests.sh  run_tests  runsanitychecks.sh  runtests-01.sh  runtests-02.sh  runtests-03.sh  runtests-c++14.sh  runtests.sh  test.sh  test_algorithm.cpp  test_alignment.cpp  test_array.cpp  test_array_view.cpp  test_array_wrapper.cpp  test_atomic.cpp  test_atomic_clang_sync.cpp  test_atomic_gcc.cpp  test_atomic_gcc_sync.cpp  test_atomic_std.cpp  (+449 more)
test/.kdev4/: test.kdev4
test/Deprecated/: test_embedded_compile.cpp  test_factory.cpp
test/UnitTest++/: AssertException.cpp  AssertException.h  BUILD.bazel  CMakeLists.txt  CheckMacros.h  Checks.cpp  Checks.h  CompositeTestReporter.cpp  CompositeTestReporter.h  Config.h  CurrentTest.cpp  CurrentTest.h  DeferredTestReporter.cpp  DeferredTestReporter.h  DeferredTestResult.cpp  DeferredTestResult.h  ExceptionMacros.h  Test.cpp  (+37 more)
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+1703 files in other folders)
